--- a/_extensions/jasa/_extension.yml
+++ b/_extensions/jasa/_extension.yml
@@ -8,6 +8,8 @@ contributes:
         - jasa.lua
       journal:
         blinded: false
+      date-format: MMMM D, YYYY
+
     pdf:
       include-in-header:
         - partials/_include-in-header.tex
@@ -23,6 +25,8 @@ contributes:
         # Add here the partials your format is using
         - "partials/title.tex"
         - "partials/before-body.tex"
+      number-sections: true
+      shift-heading-level-by: -1
     html:
       # define default configuration for the html version of your format
       number-sections: true
