--- a/_extensions/jasa/_extension.yml
+++ b/_extensions/jasa/_extension.yml
@@ -1,6 +1,7 @@
 title: Journal of the American Statistical Association
 author: Charles Teague
-version: 0.9.0
+version: 0.10.0
+quarto-required: ">=1.2.198"
 contributes:
   formats:
     common:
